--- a/index.html
+++ b/index.html
@@ -12,23 +12,40 @@
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"
       charset="utf-8"
     ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+      />
+      <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+      ></script>
+      <script src="index.js" defer charset="utf-8" type="text/javascript"></script>
   </head>
-
+  
   <body>
-    <h1 id="level-title">Press Any Key to Start</h1>
-    <div class="container">
-      <div lass="row">
-        <div type="button" id="green" class="btn green"></div>
-
-        <div type="button" id="red" class="btn red"></div>
+    <h1 id="level-title" class="text-center">Press Any Key to Start</h1>
+    <div class="container justify-content-center mx-auto w-50">
+      
+      <div class="row mx-auto justify-content-center">
+        <div type="button" id="green" class="my-btn green col "></div>
+        <div type="button" id="red" class="my-btn red col "></div>
       </div>
-
-      <div class="row">
-        <div type="button" id="yellow" class="btn yellow"></div>
-        <div type="button" id="blue" class="btn blue"></div>
+      <div class="row mx-auto justify-content-center">
+        <div type="button" id="yellow" class="my-btn yellow col"></div>
+        <div type="button" id="blue" class="my-btn blue col"></div>
       </div>
     </div>
-
-    <script src="index.js" charset="utf-8"></script>
+    <div class="download text-center m-5">
+      <a
+        href="https://github.com/BezdezhskyDenis/Simon-Game/archive/refs/heads/master.zip"
+        target="_blank"
+        class="btn btn-secondary fs-3"
+        >Download the app</a
+      >
+    </div>
   </body>
 </html>
